# logorrhythm

./: .gitignore  CAPTAINS_REPORT.md  CAPTAINS_REPORT_V2.md  CAPTAINS_REPORT_V3.md  CAPTAINS_REPORT_V4.md  CHANGELOG.md  FUTURES.md  README.md  ROADMAP.md  SECURITY.md  SPEC.md  brief.md  demo.py  demo_websocket.py  loom_report.md  pyproject.toml  task_graph.json  websockets.py
.github/workflows/: ci.yml
benchmarks/graphs/: .gitkeep
docs/: index.md
examples/: session_schema.json
legacy/: PHILOSOPHY.md
logorrhythm/: __init__.py  _demo_core.py  adaptive.py  addressing.py  api.py  benchmark.py  benchmark_sync.py  bus.py  capabilities.py  chunking.py  cli.py  cross_model.py  encoding.py  exceptions.py  heartbeat.py  registry.py  spec.py  streaming.py  topology.py  transport_ws.py  v003.py  v004.py
logorrhythm/core/: __init__.py  errors.py  frame.py  schema.py  session.py  tables.py
logorrhythm/legacy/: adaptive.py  cross_model.py  encoding.py  fault_tolerance.py  handshake.py  identity.py  layer2.py  observer.py  transport_ws.py  v003.py  v004.py
logorrhythm/metrics/: __init__.py
logorrhythm/plugins/: __init__.py
logorrhythm/routing/: __init__.py
logorrhythm/transport/: __init__.py  (+2 more)
loom/: README.md  __init__.py  common.py  start.py
schemas/: loom_schema.json
tests/: __init__.py  test_benchmark.py  test_benchmark_compare.py  test_benchmark_gate.py  test_benchmark_sync.py  test_conformance_suite.py  test_core_protocol.py  test_encoding.py  test_protocol_units.py  test_structural_breakdown_and_sync.py  test_v003.py  test_v003_features.py  test_v004.py
(+12 files in other folders)
